--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,34 +9,35 @@ services:
     env_file: .env
     ports:
       - 3000
-    stdin_open: true
-    labels:
-      - traefik.http.routers.client.rule=Host(`client.localhost`)
         
-  server:
-    build: server
+  api-swapi:
+    build: api-swapi
     env_file: .env
     volumes:
       - /app/node_modules
-      - ./server:/app
+      - ./api-swapi:/app
     ports:
       - 3000
-    stdin_open: true
-    labels:
-      - traefik.http.routers.server.rule=Host(`server.localhost`)
 
-  reverse-proxy:
-      # The official v2 Traefik docker image
-      image: traefik:v2.3
-      # Enables the web UI and tells Traefik to listen to docker
-      command: --api.insecure=true --providers.docker
-      ports:
-          # The HTTP port
-          - 80:80
-          - 443:443
-          # The Web UI (enabled by --api.insecure=true)
-          - 8000:8080
-      volumes:
-          - /var/run/docker.sock:/var/run/docker.sock:ro
-          - ./traefik/traefik.toml:/traefik.toml
-          - ./traefik/acme.json:/acme.json
+  api-user:
+    build: api-user
+    env_file: .env
+    volumes:
+      - /app/node_modules
+      - ./api-user:/app
+    ports:
+      - 3000
+
+  nginx:
+    build: nginx
+    container_name: nginx
+    restart: 'on-failure'
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/html:/etc/nginx/html
+    depends_on:
+      - api-swapi
+      - client
+    ports:
+      - 80:80
+      - 443:443
