--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -36,15 +36,15 @@ server {
         proxy_pass https://api-user:3000/;
     }
 
-    # location /events/ {
-    #     proxy_buffering off;
-    #     proxy_cache off;
-    #     proxy_set_header Connection '';
-    #     proxy_http_version 1.1;
-    #     chunked_transfer_encoding off;
+    location /api/events/ {
+        proxy_buffering off;
+        proxy_cache off;
+        proxy_set_header Connection '';
+        proxy_http_version 1.1;
+        chunked_transfer_encoding off;
         
-    #     proxy_pass https://api-dispatcher:3000/;
-    # }
+        proxy_pass https://api-swapi:3000/;
+    }
 
     error_page 404 /404.html;
     location = /404.html {
