--- a/api-swapi/package.json
+++ b/api-swapi/package.json
@@ -3,6 +3,10 @@
   "version": "0.0.1",
   "description": "",
   "main": "app.js",
+  "engines": {
+    "node": "15.x",
+    "npm": "7.0.3"
+  },
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
@@ -15,11 +19,15 @@
     "spdy": "^4.0.2"
   },
   "devDependencies": {
-    "eslint": "^7.3.1"
+    "eslint": "^7.3.1",
+    "webpack": "^5.10.0",
+    "webpack-cli": "^4.2.0",
+    "webpack-node-externals": "^2.5.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "node app.js",
+    "build": "webpack"
   },
   "author": "",
   "license": "ISC"
