--- a/api-user/package.json
+++ b/api-user/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "api-marchand",
+  "name": "user-api",
   "version": "0.0.1",
-  "description": "This is an API for CRUD operations on a marchand entity",
+  "description": "This is an API for creating and authenticating an user",
   "main": "app.js",
   "dependencies": {
     "body-parser": "^1.19.0",
